# shiny-octo-invention

./: .gitignore  .mcp.json  CLAUDE.md  CONVENTIONS.md  JOURNAL.md  ROUND_CHECKLIST.md  RUNBOOK.md  STRATEGIES.md
fx-scalper/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
fx-scalper/config/: __init__.py  secrets.py  settings.py
fx-scalper/docs/: journal_manual.md  runbook_manual.md  strategies_manual.md
fx-scalper/docs/research/: FINAL_ROLLUP.md  PHASE2_PROGRESS.md  RUN_THESE_WHEN_FREE.md  prior_assumptions_archive.md  round2_findings.md  round3_5_meta_analysis.md  round3_findings.md  round4_findings.md  round5_5_findings.md  round5_findings.md  round6_findings.md  round7_findings.md  round9_findings.md  session_synthesis_2026-04-22.md  vectorbtpro_capabilities.md
fx-scalper/logs/: ai_budget.json  events.jsonl
fx-scalper/scripts/: capture_top_config_trades.py  pull_dukascopy.py  refresh_external_docs.sh  render_all.py  render_journal.py  render_runbook.py  render_strategies.py  run_backtest.py  run_cross_pair_momentum.py  run_cross_pair_validation.py  run_exploration.py  run_exploration_multi_tf.py  run_live.py  run_mcp_server.sh  run_paper.py  run_round11_proper_stats.py  run_round12_13_basket.py  run_round14_meta_labeling.py  run_round15_fixing_reversal.py  run_round16_stat_arb.py  run_round5_5_weekday_neighbors.py  run_round6_sl_ablation.py  run_round8_cash_sharing_portfolio.py  run_round9_validation_gauntlet.py  smoke_oanda.py
fx-scalper/src/: __init__.py
fx-scalper/src/backtest/: __init__.py  data_loader.py  dukascopy_client.py  explorer.py  harness.py  iterate.py  metrics.py  registry.py  resample.py  statistics.py
fx-scalper/src/indicators/: __init__.py  engine.py
fx-scalper/src/live/: __init__.py  bot.py  risk.py  sizing.py  trailing.py
fx-scalper/src/oanda/: __init__.py  account.py  client.py  data.py  (+2 more)
fx-scalper/tests/: conftest.py  test_ai_research.py  test_data_loader.py  test_dukascopy_client.py  test_exits.py  test_explorer.py  test_families.py  test_indicators.py  test_iterate.py  test_journal.py  test_metrics.py  test_oanda_mock.py  test_risk.py  test_sizing.py  test_strategies.py  test_trailing.py
(+35 files in other folders)
