[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fx-scalper"
version = "0.1.0"
description = "Production-grade forex scalping bot trading EUR/USD, GBP/USD, USD/JPY on OANDA"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Zach Hasse", email = "zchasse89@gmail.com" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks", "data"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
  "B",   # bugbear
  "UP",  # pyupgrade
  "SIM", # simplify
  "TID", # tidy imports
  "RUF", # ruff-specific
  # "TCH" deliberately omitted — it's too aggressive and often suggests
  # moving imports that are used at runtime (type aliases, dataclass field
  # types with slots=True, isinstance checks) into TYPE_CHECKING blocks.
]
ignore = [
  "E501", # line length handled by formatter
  "RUF001", # allow unicode in strings
  "RUF002", # allow unicode in docstrings (we use × and — for math/dashes)
  "RUF003", # allow unicode in comments
]

[tool.ruff.lint.isort]
known-first-party = ["src", "config"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "oandapyV20.*",
  "pandas_ta_classic.*",
  "talib.*",
  "vectorbtpro.*",
  "duka.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "-q",
]
markers = [
  "integration: hits OANDA practice account (requires .env with valid creds)",
  "slow: takes >1s",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
